[package]
name = "dt"
version = "1.0.2"
authors = ["(Bill) Yuan Liu <yuan6liu@gmail.com>"]
edition = "2018"
description = "distance transform"
license = "MIT"
documentation = "https://docs.rs/dt/"
repository = "https://github.com/clearlycloudy/dt/"
readme = "README.md"

[dependencies]
ndarray = "0.13.1"
ndarray-rand = "0.11.0"
num = "0.3"

[dev-dependencies]
lodepng = "2.6.0"
rgb = "0.8"


